--- a/package.json
+++ b/package.json
@@ -55,9 +55,12 @@
     "babel-polyfill": "^6.5.0",
     "babel-runtime": "^6.5.0",
     "express": "^4.12.3",
+    "joi": "^10.3.3",
+    "joi-validation-strategy": "^0.3.3",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.0.1",
-    "react-router": "^2.0.0"
+    "react-router": "^2.0.0",
+    "react-validation-mixin": "^5.4.0"
   }
 }
