--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "joi-validation-strategy": "^0.3.3",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.8",
+    "react-datepicker": "^0.44.0",
     "react-dom": "^15.0.1",
     "react-router": "^2.0.0",
     "react-validation-mixin": "^5.4.0"
